Most Popular Spacing Issue fix

--- a/resources/assets/sass/application.scss
+++ b/resources/assets/sass/application.scss
@@ -464,6 +464,7 @@ nav	{
     padding:5px 0px 5px 0px;
     font-weight:$bold;
     letter-spacing: 1.1px;
+    text-transform: uppercase;
 }
 
 
